fixed: blog content overflow #80

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -187,6 +187,10 @@ footer p{
   margin: 50px;
   text-align: left;
   line-height: 1.7em;
+  white-space: pre-line;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  font-size: 1.1em;
 }
 
 .blog__area img{
